--- a/src/app/modules/admin/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/modules/admin/components/admin-dashboard/admin-dashboard.component.html
@@ -23,50 +23,48 @@
   </div>
 </nav>
 <!-- FIN NAVBAR -->
-<div class="container mt-4">
-  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3 justify-content-center my-3">
-    <!-- Verificar si hay elementos en la lista de carros -->
-    <ng-container *ngIf="carList.length > 0; else noCarsMessage">
-      <div class="col mb-3" *ngFor="let car of carList">
-        <div class="card">
-          <img [src]="car.img" class="card-img-top w-100" style="height: 300px;" alt="Car Image"> <!-- Establece el ancho al 100% del contenedor padre -->
-          <div class="card-body">
-            <h5 class="card-title text-center">{{ car.name }}</h5>
-            <hr>
-            <div class="d-flex flex-wrap">
-              <p class="card-text font-weight-bold me-3">Marca: {{ car.brand }}</p>
-              <p class="card-text me-3">Precio: {{ car.price }}</p>
-              <p class="card-text me-3">Color: {{ car.color }}</p>
-              <p class="card-text me-3">Transmisión: {{ car.transmission }}</p>
-              <p class="card-text me-3">Tipo: {{ car.type }}</p>
-              <p class="card-text">Año: {{ car.year }}</p>
-            </div>
-            <p class="card-text">{{ car.description }}</p>
-            <!-- Botones de actualizar y borrar -->
-            <div class="d-flex justify-content-end">
-              <button class="btn btn-primary me-2" routerLink="/admin/car/{{car.id}}">Actualizar</button>
-              <button class="btn btn-danger" (click)="deleteCar(car.id)">Borrar</button>
+
+<div class="container" style="margin-top: 50px;">
+  <div class="row">
+    <div class="col-md-3" *ngFor="let car of carList">
+      <div class="card-sl">
+        <div class="card-image">
+          <img [src]="car.img" />
+        </div>
+
+        <div class="card-heading text-center">
+          {{ car.name }}
+        </div>
+
+        <div class="accordion" id="accordionExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingOne">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                Detalles
+              </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                <strong>Marca - </strong> {{car.brand}}
+                <hr>
+                <strong>Color - </strong> {{car.color}}
+                <hr>
+                <strong>Transmisión - </strong> {{car.transmission}}
+                <hr>
+                <strong>Año - </strong> {{car.year}}
+                <hr>
+                <strong>Costo: </strong><span class="badge bg-success">${{ car.price }}</span>
+              </div>
             </div>
           </div>
         </div>
+
+        <!-- Primer botón "Purchase" -->
+        <a class="card-button" routerLink="/admin/car/{{car.id}}">Actualizar</a>
+
+        <!-- Segundo botón "Purchase" -->
+        <a (click)="deleteCar(car.id)" class="card-button2">Eliminar</a>
       </div>
-    </ng-container>
-    <!-- Mensaje de error si no hay carros -->
-    <ng-template #noCarsMessage>
-      <div class="alert alert-warning" role="alert">
-        No hay carros disponibles. Agregue uno para verlo aquí.
-      </div>
-    </ng-template>
+    </div>
   </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-<router-outlet></router-outlet>
