--- a/src/app/modules/admin/components/post-car/post-car.component.html
+++ b/src/app/modules/admin/components/post-car/post-car.component.html
@@ -107,7 +107,8 @@
             </div>
 
             <div class="text-center mt-3">
-              <button type="button" class="btn btn-primary" (click)="addcar()">Agregar Carro</button>
+              <button type="button" class="btn btn-primary m-2" (click)="addcar()">Agregar Carro</button>
+              <button type="button" class="btn btn-danger" (click)="Cancelar()">Cancelar</button>
           </div>
                 </form><!-- End Highlighted-form -->
             </div>
