--- a/src/app/modules/admin/components/update-car/update-car.component.html
+++ b/src/app/modules/admin/components/update-car/update-car.component.html
@@ -106,7 +106,10 @@
 
           <div class="text-center mt-3">
             <button type="button" class="btn btn-primary" (click)="updateCar(car.id)">Actualizar Carro</button>
+            <button type="button" class="btn btn-danger m-2" onclick="window.location.href='/admin'">Cancelar</button>
           </div>
+
+
         </form><!-- End Highlighted-form -->
       </div>
     </div>
