--- a/src/app/modules/costumer/components/book-car/book-car.component.html
+++ b/src/app/modules/costumer/components/book-car/book-car.component.html
@@ -30,7 +30,8 @@
 
           <!-- Botón de reservar -->
           <div class="text-center mt-3"> <!-- Agrega la clase text-center para centrar el botón -->
-            <button class="btn btn-success" (click)="bookCar()">Reservar</button> <!-- Usa el color verde de Bootstrap -->
+            <button class="btn btn-success m-2" (click)="bookCar()">Reservar</button> <!-- Usa el color verde de Bootstrap -->
+            <button class="btn btn-danger" (click)="Cancelar()">Cancelar</button> <!-- Usa el color verde de Bootstrap -->
           </div>
         </div>
       </div>
