--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -45,7 +45,7 @@
                           <input type="submit" name="signup" id="signup" class="form-submit" value="Ingresar" (click)="login(registerForm.value)"/>
                       </div>
                       <div class="form-group">
-                          <a href="#">¿No tienes cuenta? Regístrate aquí</a>
+                          <a href="/register">¿No tienes cuenta? Regístrate aquí</a>
                       </div>
                   </form>
               </div>
