--- a/src/app/modules/costumer/components/bookings/bookings.component.html
+++ b/src/app/modules/costumer/components/bookings/bookings.component.html
@@ -1,1 +1,68 @@
-<p>bookings works!</p>
+<!-- INICIO NAVBAR -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Wall-e Cars</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarScroll">
+      <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+        <!-- Agregar Mis Reservaciones -->
+        <li class="nav-item" style="margin-right: 20px;">
+          <a class="nav-link" href="/customer">
+            <i class="bi bi-house"></i> Dashboard
+          </a>
+        </li>
+        <!-- Cerrar Sesión -->
+        <li class="nav-item" style="margin-right: 20px;">
+          <a class="nav-link" href="/login">
+            <i class="bi bi-person-fill"></i> Cerrar Sesión
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<!-- FIN NAVBAR -->
+
+<div class="container">
+  <div class="row m-5">
+    <div class="col-lg-6 mb-4" *ngFor="let item of bookingsWithCars">
+      <div class="card card-margin">
+        <div class="card-header no-border">
+          <h5 class="card-title">{{ item.carDetails.description }}</h5>
+        </div>
+        <div class="card-body pt-0">
+          <div class="row">
+            <!-- Columna para la imagen del carro -->
+            <div class="col-md-6 mb-3">
+              <img src="{{ item.carDetails.img }}" alt="Car Image" class="img-fluid">
+            </div>
+            <!-- Columna para la lista de detalles del carro -->
+            <div class="col-md-6">
+              <div class="widget-49">
+                <div class="widget-49-title-wrapper">
+                  <div class="widget-49-date-primary">
+                    <span class="widget-49-date-day">{{ item.booking.from | date:'d' }}</span>
+                    <span class="widget-49-date-month">{{ item.booking.from | date:'MMM' }}</span>
+                  </div>
+                  <div class="widget-49-meeting-info">
+                    <span class="widget-49-pro-title">{{ item.carDetails.brand }}</span>
+                    <span class="widget-49-meeting-time">{{ item.booking.from }} - {{ item.booking.to }}</span>
+                  </div>
+                </div>
+                <ul class="widget-49-meeting-points">
+                  <li class="widget-49-meeting-item"><span>{{ item.carDetails.color }}</span></li>
+                  <li class="widget-49-meeting-item"><span>{{ item.carDetails.transmission }}</span></li>
+                  <li class="widget-49-meeting-item"><span>{{ item.carDetails.type }}</span></li>
+                  <li class="widget-49-meeting-item"><span>{{ item.carDetails.year }}</span></li>
+                  <li class="widget-49-meeting-item"><span>${{ item.carDetails.price | number:'1.0-0'}}</span></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
